Fix bug where KPCC + Laist logos were blurry in Safari

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -85,6 +85,9 @@ html
   border-bottom-left-radius: 100px 2px
   opacity: 1.0
 
+.kpcc-laist-logos
+  pointer-events: none
+
 @media (max-width: $l-med-breakpoint)
   .footer-component
     @include footer-component--med
